// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot when there are ajaxCallsInProgress 1`] = `
<Fragment>
  <Loader />
  <Connect(Sidebar) />
  <div
    className="main"
    onClick={[Function]}
  >
    <Connect(Categories) />
  </div>
</Fragment>
`;

exports[`<App /> should match snapshot when there are no ajaxCallsInProgress 1`] = `
<Fragment>
  <Connect(Sidebar) />
  <div
    className="main"
    onClick={[Function]}
  >
    <Connect(Categories) />
  </div>
</Fragment>
`;
